[package]
name = "kyber"
description = "Code editor focused on transformations."
version = "0.1.0"
edition = "2018"
authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
license = "MIT"

[dependencies]
dirs = "3.0"
log = "0.4"
ignore = "0.4"
env_logger = "0.8"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termion = "1.5"
tui = "0.15"
walkdir = "2.3"
